acs-install/97_http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-http
  namespace: rhacs
spec:
  selector:
    app: central
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
