acs-install/98_custom-route-plaintext.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  # If OpenShift Auth is used in Central route name must be central (OAuth redirectreference)
  name: central
  namespace: rhacs
spec:
  port:
    targetPort: "8080"
  to:
    kind: Service
    name: http-central
    weight: 100
  tls:
    termination: "edge"
