acs-install/99_custom-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: rhacs-central
  namespace: rhacs
spec:
  port:
    targetPort: "8080"
  to:
    kind: Service
    name: http-central
    weight: 100
  tls:
    termination: "edge"
