acs-install/97_network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ext-to-central-http
  namespace: rhacs
spec:
  podSelector:
    matchLabels:
      app: central
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
